spade-tests/src/snapshots/spade_tests__typeinference__generic_relative_out_of_bounds_pipeline_offset_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
pipeline(N) p<#int N, #int O>(clk: clock, x: bool) -> bool {
    reg * {N};
        let a = stage(+O).x;
        x
}

entity a(clk: clock) -> bool {
    inst(10) p::<10, 5>(clk, false)
}


error: Pipeline references stage 15 which is beyond the end of the pipeline
  ┌─ testinput:3:17
  │
1 │ pipeline(N) p<#int N, #int O>(clk: clock, x: bool) -> bool {
  │          - Depth 10 specified here
2 │     reg * {N};
3 │         let a = stage(+O).x;
  │                 ^^^^^^^^^ Reference past the end of the pipeline
  │
  = help: This offset is relative to the current stage which is 10
  = The error is in a generic unit instantiated at
    ╰ testinput:8 p<10, 5>
